--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Your Consultant</title>
     <link rel="icon" type="image/svg+xml" href="/xiaoba.svg" />
     
+    <!-- TailwindCSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
   </head>
   <body>
